MacViews: Fix flaky label selection tests.

r431107 enabled text selection related tests on Mac by using RenderTextHarfBuzz
for these tests. It did this by appending the kEnableHarfBuzzRenderText switch
to the list of command line switches.

However RenderText::CreateInstance() assigns the result of evaluating the
presence of this switch to the static variable |use_native|. As a result, if
another test has already initialized the variable |use_native| to true,
appending the kEnableHarfBuzzRenderText switch has no effect. This causes the
Label selection tests to fail on Mac. To fix, make the |use_native| variable
non-static.

BUG=666162

Review-Url: https://codereview.chromium.org/2507363003
Cr-Commit-Position: refs/heads/master@{#433123}

Former-commit-id: 50221c896a243c90466c5bed3ad83008198ea2b5